Modified tag of groups A and B

--- a/Liga Futbol/index.html
+++ b/Liga Futbol/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Clase 3</title>
+    <title>Ligas Futbol Colombiano</title>
     <!-- Iconos -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <!-- Bootstrap CSS -->
@@ -26,10 +26,7 @@
               <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#ligaA">Liga A</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#todas" id="botonTodas">Ligas Profesionales</a>
+              <a class="nav-link" href="#todas" id="botonTodas">Tabla Puntos</a>
             </li>
           </ul>
         </div>
@@ -86,17 +83,17 @@
             <div class="section" id="todas">
                     <ul class="nav nav-tabs">
                             <li class="nav-item">
-                              <a class="nav-link active" href="#">Liga A</a>
+                              <a class="nav-link active" href="#" id="linkA">Liga A</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">Liga B</a>
+                              <a class="nav-link" href="#" id="linkB">Liga B</a>
                             </li>
                           </ul>
                 <table class="table table-hover">
                     <thead>
                         <tr>
-                        <th scope="col">Club</th>  
-                        <th scope="col"><a href="#" id="ordenLigas">Liga <i class="fas fa-sort-up"></i><i class="fas fa-sort-down"></i></a>
+                        <th scope="col"><a href="#" id="ordenClub">Club <i class="fas fa-sort-up"></i><i class="fas fa-sort-down"></i></a></th>  
+                        <th scope="col">Liga</th>
                             
                         </th>
                         <th scope="col">PJ</th>
