--- a/Liga Futbol/index.html
+++ b/Liga Futbol/index.html
@@ -83,6 +83,9 @@
             <div class="section" id="todas">
                     <ul class="nav nav-tabs">
                             <li class="nav-item">
+                                <a class="nav-link" href="#" id="linkT">Todas</a>
+                            </li>
+                            <li class="nav-item">
                               <a class="nav-link active" href="#" id="linkA">Liga A</a>
                             </li>
                             <li class="nav-item">
