fix source ligafutbol/index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="jumbotron">
             <h1>Ligas Colombianas</h1>
             <p class="lead">Ejemplo donde se uso de clases, funciones, eventos, filter, sort y prototype</p>
-            <a class="btn btn-lg btn-primary" href="LigaFutbol/index.htm" role="button">Ver &raquo;</a>
+            <a class="btn btn-lg btn-primary" href="LigaFutbol/index.html" role="button">Ver &raquo;</a>
           </div>
       </main>
   
