Start project Star Wars

--- a/index.html
+++ b/index.html
@@ -45,7 +45,17 @@
             <h1>Ligas Colombianas</h1>
             <p class="lead">Ejemplo donde se uso de clases, funciones, eventos, filter, sort y prototype</p>
             <a class="btn btn-lg btn-primary" href="LigaFutbol/index.html" role="button">Ver &raquo;</a>
-          </div>
+        </div>
+        <div class="jumbotron">
+          <h1>Perfil GitHub</h1>
+          <p class="lead">Ejercicio que realiza peticiones JavaScript a la Api de GitHub</p>
+          <a class="btn btn-lg btn-primary" href="PerfilGitHub/index.html" role="button">Ver &raquo;</a>
+        </div>
+        <div class="jumbotron">
+          <h1>Star Wars</h1>
+          <p class="lead">Reto divertido donde se consume datos de la Api de Star Wars donde se muestran personajes, naves, planetas entre otros datos</p>
+          <a class="btn btn-lg btn-primary" href="StarWars/index.html" role="button">Ver &raquo;</a>
+        </div>
       </main>
   
       <!-- Bootstrap core JavaScript
