--- a/StarWars/index.html
+++ b/StarWars/index.html
@@ -20,6 +20,8 @@
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
      <!-- sweetalert2 -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.28.1/sweetalert2.min.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.28.1/sweetalert2.min.css">
      <link rel="stylesheet" href="/node_modules/sweetalert2/dist/sweetalert2.min.css">
  
     <style>
@@ -321,5 +323,7 @@
   <!-- sweetalert2 -->
   <script src="/node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
   <script src="/node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.28.1/sweetalert2.all.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.28.1/sweetalert2.all.min.js"></script>
 </body>
 </html>
