Add chat FireBase and countries with Jquery

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
           <p class="lead">Reto divertido donde se consume datos de la Api de Star Wars donde se muestran personajes, naves, planetas entre otros datos</p>
           <a class="btn btn-lg btn-primary" href="StarWars/index.html" role="button">Ver &raquo;</a>
         </div>
+        <div class="jumbotron">
+          <h1>jQuery</h1>
+          <p class="lead">En este ejercicio se usan promesas y una estructura ajax para manejarlas</p>
+          <a class="btn btn-lg btn-primary" href="jQuery/index.html" role="button">Ver &raquo;</a>
+        </div>
       </main>
   
       <!-- Bootstrap core JavaScript
