--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -18,25 +18,32 @@
     }
     </style>
 </head>
-<nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #f44336">
-  <a class="navbar-brand" href="#">Paises del Mundo</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="regiones" href="regiones.html">Regiones</a>
-      </li>
-    </ul>
-  </div>
-  </nav>
   <br>
-  
-<section>
+  <br>
+  <br>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #f44336">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <a class="navbar-brand" href="#">Paises del Mundo</a>
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="regiones" href="regiones.html">Regiones</a>
+        </li>
+      </ul>
+      <div class="btn-group" role="group" aria-label="Basic example">
+        <input type="text" id="text_buscar" placeholder="Buscar">
+        <button class="btn btn-info my-2 my-sm-0" id="btn_buscar">Buscar</button>
+      </div>
+
+    </div>
+  </nav>
+
+<section id='sec_continentes'>
   <div class="container">
     <h4>Continentes</h4>
     <ul class="nav nav-tabs">
@@ -67,17 +74,47 @@
             <th scope="col">Detalle</th>
           </tr>
         </thead>
-        <tbody id="paisesTabla">
+        <tbody class='test' id="paisesTabla">
           <!-- Aqui se renderizan desde script.js los datos de los paises -->
         </tbody>
       </table> 
     </div>
     <div class="col-sm">
-
         <div class="fixed" id="geochart-colors" style="width: 500px; height: 300px;"></div>
     </div>
-    </div><!-- cierro row -->
-        
+    </div><!-- cierro row --> 
+</section>
+
+<section id='sec_detalle_pais'>
+    <div class="container">
+      <a href="index.html">Continentes</a>
+        <br>      
+        <br>
+        <div class='row'>
+        <div class="col-sm">
+            <div id="chart_detail" style="width: 900px; height: 500px;"></div>
+        </div>
+        <div class="col-sm">
+        <div class="card" style="width: 18rem;">
+          <!-- <img class="card-img-top" src="" alt="Card image cap">-->
+          
+          <div class="card-body">
+            <h5 class="card-title" id=nombre_detalle_pais></h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item" >Cras justo odio</li>
+            <li class="list-group-item" >Dapibus ac facilisis in</li>
+            <li class="list-group-item" >Vestibulum at eros</li>
+          </ul>
+          <div class="card-body">
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+          </div>
+      </div>
+    </div>
+    </div>
+  </div>
 </section>
 
 <!-- <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script> -->
