--- a/jQuery/regiones.html
+++ b/jQuery/regiones.html
@@ -6,27 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>Paises</title>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <title>Regiones</title>
+    <style>
+      div.fixed {
+        position: fixed;
+        /* bottom: 0; */
+        right: 0;
+        width: 370px;
+        border: 3px solid #2CA9CB;
+      }
+      </style>
 </head>
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-  <a class="navbar-brand" href="#">Paises del Mundo</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="continentes" href="index.html">Contienes</a>
-      </li> 
-    </ul>
-  </div>
-  </nav>
   <br>
-  
-<section>
+  <br>
+  <br>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #f44336">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <a class="navbar-brand" href="#">Paises del Mundo</a>
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="continentes" href="index.html">Contienes</a>
+        </li>
+      </ul>
+      <div class="btn-group" role="group" aria-label="Basic example">
+        <input type="text" id="text_buscar" placeholder="Buscar">
+        <button class="btn btn-info my-2 my-sm-0" id="btn_buscar">Buscar</button>
+      </div>
+    </div>
+  </nav>
+
+<section id='sec_region'>
   <div class="container">
     <!-- <h4>Regiones</h4> -->
     <ul class="nav nav-tabs">
@@ -47,19 +63,26 @@
       </li>
       </ul>
     <br>
-    <table class="table table-bordered">
-      <thead>
-        <tr>
-          <th>Bandera</th>
-          <th scope="col">Pais</th>
-          <th scope="col">Capital</th>
-          <th scope="col">Detalle</th>
-        </tr>
-      </thead>
-      <tbody id="paisesTabla">
-        <!-- Aqui se renderizan desde script.js los datos de los paises -->
-      </tbody>
-    </table>     
+    <div class="row">
+      <div class="col-sm">
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th>Bandera</th>
+              <th scope="col">Pais</th>
+              <th scope="col">Capital</th>
+              <th scope="col">Detalle</th>
+            </tr>
+          </thead>
+          <tbody id="paisesTabla">
+            <!-- Aqui se renderizan desde script.js los datos de los paises -->
+          </tbody>
+        </table>
+      </div>
+      <div class="col-sm">
+        <div class="fixed" id="geochart-colors" style="width: 500px; height: 300px;"></div>
+      </div>  
+    </div><!-- cierro row -->  
 </section>
 
 <!-- <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script> -->
