--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
           <a class="btn btn-lg btn-primary" href="StarWars/index.html" role="button">Ver &raquo;</a>
         </div>
         <div class="jumbotron">
+          <h1>FireBase</h1>
+          <p class="lead">Sencillo chat que utiliza Firebase como backend para guardar los mensajes</p>
+          <a class="btn btn-lg btn-primary" href="Firebase/index.html" role="button">Ver &raquo;</a>
+        </div>
+        <div class="jumbotron">
           <h1>jQuery</h1>
           <p class="lead">En este ejercicio se usan promesas y una estructura ajax para manejarlas</p>
           <a class="btn btn-lg btn-primary" href="jQuery/index.html" role="button">Ver &raquo;</a>
